--- a/index.html
+++ b/index.html
@@ -99,6 +99,23 @@
       margin-top: 22px;
     }
 
+    /* neue Linie */
+    .divider {
+      width: 100%;
+      height: 1px;
+      background: rgba(148, 163, 184, 0.25);
+      margin: 20px 0;
+    }
+
+    /* neuer großer Titel */
+    .section-title {
+      font-size: 22px;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+      margin-bottom: 18px;
+      color: #e5e7eb;
+    }
+
     .photo {
       width: 100%;
       background: #0f172a;
@@ -164,9 +181,15 @@ Heute startet unser kleiner Countdown zu unseren besonderen Tagen.
   </button>
 
   <div class="reveal-area" id="revealArea">
-    <p class="day-label">Heute ist der 01.12.</p>
-    <p class="day-main">Noch 21 Tage bis zu unserer Nikah 🤍</p>
-    <p class="day-sub">Und nur noch 23 Tage bis zu unserem Standesamt.</p>
+    <div class="day-label">Heute ist der 01.12.</div>
+    <div class="day-main">Noch 21 Tage bis zu unserer Nikah 🤍</div>
+    <div class="day-sub">Und nur noch 23 Tage bis zu unserem Standesamt.</div>
+
+    <!-- neue Linie -->
+    <div class="divider"></div>
+
+    <!-- neuer großer Titel -->
+    <div class="section-title">Wie alles anfing...</div>
 
     <img
       class="photo"
@@ -174,9 +197,6 @@ Heute startet unser kleiner Countdown zu unseren besonderen Tagen.
       alt="Unser Moment"
     />
 
-    <div class="text-below">
-      Wie alles anfing... 💚
-    </div>
   </div>
 </div>
 
