--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Heute startet unser kleiner Countdown zu unseren besonderen Tagen.
 
     <div class="divider"></div>
 
-    <div class="section-title">Wie alles anfing...</div>
+    <div class="section-title">Wie alles begann...</div>
 
     <img
       class="photo"
