--- a/tag6.html
+++ b/tag6.html
@@ -163,7 +163,7 @@
 
     <div class="divider"></div>
 
-    <div class="section-title">Unser erstes Foto – am Tag, an dem wir uns unsere Eheringe angeschaut haben.</div>
+    <div class="section-title">Unser erstes Foto – am Tag, an dem wir uns Eheringe angeschaut haben.</div>
 
     <img
       class="photo"
