--- a/tag18.html
+++ b/tag18.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Countdown – Tag 17 💚</title>
+  <title>Countdown – Tag 18 💚</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -90,14 +90,7 @@
       gap: 8px;
       background: #e5e7eb;
       color: #020617;
-      transition: transform 0.12s ease, box-shadow 0.12s ease, background 0.2s ease;
       box-shadow: 0 10px 25px rgba(0,0,0,0.35);
-    }
-
-    button.reveal-btn:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 16px 35px rgba(0,0,0,0.5);
-      background: #ffffff;
     }
 
     .reveal-area {
@@ -116,16 +109,12 @@
     .section-title {
       font-size: 22px;
       font-weight: 600;
-      letter-spacing: 0.02em;
       margin-bottom: 18px;
-      color: #e5e7eb;
     }
 
     .photo {
       width: 100%;
-      background: #0f172a;
       border-radius: 18px;
-      margin-bottom: 14px;
       box-shadow: 0 16px 35px rgba(0,0,0,0.5);
       object-fit: contain;
       max-height: 450px;
@@ -149,10 +138,10 @@
     Nikah am 21.12. • Standesamt am 23.12.
   </p>
 
-  <!-- Countdown direkt sichtbar -->
-  <div class="day-label">Heute ist der 17.12.</div>
-  <div class="day-main">Noch 4 Tage bis zu unserer Nikah 🤍</div>
-  <div class="day-sub">Und nur noch 6 Tage bis zu unserem Standesamt.</div>
+  <!-- Countdown sichtbar -->
+  <div class="day-label">Heute ist der 18.12.</div>
+  <div class="day-main">Noch 3 Tage bis zu unserer Nikah 🤍</div>
+  <div class="day-sub">Und nur noch 5 Tage bis zu unserem Standesamt.</div>
 
   <button class="reveal-btn" id="revealButton">
     <span>✨</span>
@@ -160,17 +149,14 @@
   </button>
 
   <div class="reveal-area" id="revealArea">
-
     <div class="divider"></div>
-
-    <div class="section-title">Meine türkmenische Perle, ben seni yerim 🤍</div>
+    <div class="section-title">Meine türkmenische Perle 🤍</div>
 
     <img
       class="photo"
-      src="Tag 17.jpg"
+      src="Tag 18.jpg"
       alt="Unser Moment"
     />
-
   </div>
 </div>
 
