--- a/tag21.html
+++ b/tag21.html
@@ -139,7 +139,7 @@
   </p>
 
   <div class="day-label">Heute ist der 21.12.</div>
-  <div class="day-main">Heute beginnt unser gemeinsamer Weg 🤍</div>
+  <div class="day-main">Der Tag unserer Nikah 🤍</div>
   <div class="day-sub">Und nur noch 2 Tage bis zu unserem Standesamt.</div>
 
   <button class="reveal-btn" id="revealButton">
